changed gameboard layout

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ header {
     border: 1.5px solid black; 
 }
 
-.black-cell {
-    background-color: black;
+.blank-cell {
+    background-color: white;
+    border: none;
+    visibility: hidden;
 }
