--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@ header {
     font-size: 2vmin;
     text-align: center;
     margin-top: 3em;
-    margin-bottom: 2em;
+    margin-bottom: .5em;
     font-family: 'Cutive Mono', monospace;
     letter-spacing: -.5px;
     text-transform: uppercase;
+    align-items: center;
 }
 
 body {
@@ -23,7 +24,6 @@ body {
 
 #gameboard {
     border-collapse: collapse;
-    cursor: pointer;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold
 }
@@ -36,7 +36,11 @@ body {
     font-size: 18px;
     min-width: 30px;
     min-height: 30px;
-    
+    cursor: pointer;
+}
+
+#gameboard td[contenteditable="true"]:hover {
+    background-color: #f0f0f0;
 }
 
 #gameboard td[contenteditable="true"]:focus {
@@ -52,6 +56,7 @@ body {
     word-spacing: -1px;
     letter-spacing: .5px;
     line-height: 22px;
+    font-size: 15px;
 }
 
 #downwords {
@@ -65,9 +70,19 @@ body {
 }
 
 #clearButton {
-    margin-top: 10px;
+    margin-top: 6px;
     margin-bottom: 30px;
     padding: 3px;
+}
+
+td[contenteditable="true"]::before {
+    content: attr(placeholder); 
+    color: black;
+    font-size: 7px;
+    font-family: 'Times New Roman', Times, serif;
+    position: relative;
+    left: -1.4em;
+    top: -2em;
 }
 
 
