--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 #gameboard {
     border-collapse: collapse;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold
+    font-weight: lighter;
 }
 
 #gameboard td[contenteditable="true"] {
@@ -33,10 +33,11 @@ body {
     width: 30px;
     height: 30px;
     text-align: center;
-    font-size: 18px;
+    font-size: 16px;
     min-width: 30px;
     min-height: 30px;
     cursor: pointer;
+    position: relative;
 }
 
 #gameboard td[contenteditable="true"]:hover {
@@ -56,7 +57,7 @@ body {
     word-spacing: -1px;
     letter-spacing: .5px;
     line-height: 22px;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 #downwords {
@@ -71,19 +72,33 @@ body {
 
 #clearButton {
     margin-top: 6px;
-    margin-bottom: 30px;
+    margin-bottom: 38px;
     padding: 3px;
+    font-family: 'Cutive Mono', monospace;
+    font-weight: 1000;
+    transition-duration: .3s;
+    background-color: rgb(215, 215, 215);
 }
+
+#clearButton:hover {
+    background-color: rgb(194, 73, 73);
+    cursor: pointer;
+} 
+
 
 td[contenteditable="true"]::before {
     content: attr(placeholder); 
     color: black;
     font-size: 7px;
     font-family: 'Times New Roman', Times, serif;
-    position: relative;
-    left: -1.4em;
-    top: -2em;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translate(0, 0);
+    padding: 1.5px;
 }
+
+
 
 
 
