--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,9 @@ header {
     padding-right: 15px;
 }
 
-header :hover {
-    background-color: rgb(242, 146, 67);
+header:hover {
+    transition: all 0.8s;
+  transform: rotateY(180deg);
 }
 
 body {
@@ -35,13 +36,14 @@ body {
 
 #titlelink, #titlelink:link, #titlelink:visited {
     color: black;
-    text-decoration: none; /* Optional: Remove underline for links */
+    text-decoration: none; 
 }
 
 #titlelink:hover {
     color: rgb(223, 199, 98);
-    text-decoration: none; /* Optional: Remove underline for links */
+    text-decoration: none; 
 }
+
 #gameboard {
     border-collapse: collapse;
     font-family: Arial, Helvetica, sans-serif;
@@ -82,10 +84,9 @@ td[contenteditable="true"]::before {
     border: 1.5px solid black;
 }
 
-#acrosswords,
-#downwords {
+#acrosswords,#downwords {
     flex: 1;
-    margin-top: 9em;
+    margin-top: 8em;
     font-family: 'Cutive Mono', monospace;
     word-spacing: -1px;
     letter-spacing: .5px;
@@ -113,7 +114,7 @@ td[contenteditable="true"]::before {
     font-weight: 1000;
     text-transform: uppercase;
     transition-duration: .3s;
-    background-color: rgb(220, 216, 205);;
+    background-color: rgb(220, 216, 205);
     width: 110px;
 }
 
@@ -138,7 +139,7 @@ td[contenteditable="true"]::before {
     font-weight: 1000;
     text-transform: uppercase;
     transition-duration: .3s;
-    background-color: rgb(220, 216, 205);;
+    background-color: rgb(220, 216, 205);
     width: 110px;
 }
 
@@ -151,4 +152,4 @@ td[contenteditable="true"]::before {
     background-color:  rgb(223, 199, 98);
     box-shadow: 0 2px #666;
     transform: translateY(1.5px);
-  }
+}
